# pillow_heif_x265

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSES_bundled.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test-src-build-macos.yml  test-src-build-windows.yml
pillow_heif_x265/: _pillow_heif_x265.cc
src/pillow_heif_x265/: __init__.py  _version.py  _x265.cc
tests/: PKGBUILD  libheif.rb  temporary.py
