[build-system]
requires = [
  "setuptools>=67.8",
  "wheel",
]

[tool.cibuildwheel]
build-verbosity = "2"
build = ["cp38-* cp39-* cp310-* cp311-* cp312-* pp38-* pp39-* pp310-*"]
skip = ["cp36-* cp37-* pp37-*"]
test-command = "pytest {project}"
before-test = [
    "pip install --prefer-binary pillow",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install x265",
    "HOMEBREW_PREFIX=$(brew --prefix)",
    "REPAIR_LIBRARY_PATH=$HOMEBREW_PREFIX/lib",
]
repair-wheel-command = [
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel -v --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
test-skip = "cp38-macosx_arm64"

[tool.cibuildwheel.windows]
before-build = [
    "pip install delvewheel",
]

[tool.cibuildwheel.linux]
musllinux-i686-image = "musllinux_1_2"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

[tool.black]
line-length = 120
target-versions = ["py38"]
preview = true

[tool.ruff]
line-length = 120
preview = true
target-version = "py38"
select = ["A", "B", "C", "D", "E", "F", "FURB", "G", "I", "S", "SIM", "PERF", "PIE", "Q", "RET", "RUF", "UP" , "W"]
extend-ignore = ["D107", "D105", "D203", "D213", "D401", "E203", "I001", "RUF100"]

[tool.ruff.per-file-ignores]
"src/pillow_heif_x265/__init__.py" = ["F401"]
"setup.py" = ["S"]

[tool.ruff.extend-per-file-ignores]
"tests/**/*.py" = ["B009", "D", "E402", "PERF", "S", "UP"]

[tool.ruff.mccabe]
max-complexity = 16

[tool.isort]
profile = "black"
