[metadata]
name = pillow_heif_x265
description = H.265/HEVC as a plugin for libheif
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcat88/pillow_heif_x265
author = Alexander Piskun
author_email = bigcat88@users.noreply.github.com
keywords = heif, heic, x265, pillow
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
license = LGPLv3
project_urls =
    Documentation=https://pillow-heif.readthedocs.io
    Source=https://github.com/bigcat88/pillow_heif_x265
    Changelog=https://github.com/bigcat88/pillow_heif_x265/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
zip_safe = False
packages =
    pillow_heif_x265
package_dir =
    = src

[options.extras_require]
tests =
    pytest
    packaging
    pillow
dev =
    pytest
    packaging
    pillow
    pre-commit
